projects/maison/src/apps/n8n/policies/allow-egress-from-n8n-to-n8n-anonymizer.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows egress traffic from n8n to the anonymisation service.

      **Why?**
      - n8n will use the anonymisation service to anonymise data before
        sending it to public services (like ChaGPT).
  name: allow-egress-from-n8n-to-n8n-anonymizer
  namespace: n8n
spec:
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: n8n-anonymizer
              app.kubernetes.io/name: n8n
      ports:
        - port: 3000
        - port: 3001
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n
  policyTypes:
    - Egress
