projects/maison/src/apps/n8n/policies/allow-egress-from-n8n-to-postgress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows egress traffic from n8n to Postgres database.

      **Why?**
      - n8n needs to connect to the Postgres database as data backend.
  name: allow-egress-from-n8n-to-postgress
  namespace: n8n
spec:
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: n8n-database
      ports:
        - port: 5432
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: n8n
      app.kubernetes.io/name: n8n
  policyTypes:
    - Egress
