projects/maison/src/apps/n8n/policies/allow-to-kubernetes-dns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows egress traffic from pods with the label
      `network-policy.k8s.io/allow-to-kubernetes-dns` to the Kubernetes DNS
      service.

      **Why?**
      - Required for DNS resolution in the Kubernetes cluster.
  name: allow-to-kubernetes-dns
  namespace: n8n
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchExpressions:
      - key: network-policy.k8s.io/allow-to-kubernetes-dns
        operator: Exists
  policyTypes:
    - Egress
