projects/maison/src/apps/n8n/policies/deny-by-default.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy denies all traffic to and from any pods by default.

      **Why?**
      - This policy is the default policy for all pods for security reasons.
  name: deny-by-default
  namespace: n8n
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
